--- a/site/resources/fonts/fonts.css
+++ b/site/resources/fonts/fonts.css
@@ -1,4 +1,26 @@
+@charset "utf-8";
 /*
     MILL SHOP COMPANY, 2016
     CREATED BY NIKITA GRECHUKHIN, NIKOLAY KOMAROV AND VAGIK SIMONYAN
 */
+
+@font-face {
+    font-family: "Cyntho Light";
+    font-style: normal;
+    font-weight: normal;
+    src: url('CynthoLight.woff') format('woff');
+}
+
+@font-face {
+    font-family: "Cyntho Medium";
+    font-style: normal;
+    font-weight: normal;
+    src: url('CynthoMedium.woff') format('woff');
+}
+
+@font-face {
+    font-family: "Cyntho Bold";
+    font-style: normal;
+    font-weight: normal;
+    src: url('CynthoBold.woff') format('woff');
+}
