--- a/site/css/Footer.css
+++ b/site/css/Footer.css
@@ -13,13 +13,32 @@
     bottom: 0;
     left: 0;
     padding: 1em;
-    text-align: left;
+    text-align: center;
     background-color: #152b3c;
-    color: aliceblue;
-    height: 160px;
+    color: white;
+    height: 60px;
+}
+
+#footer-inside {
+    text-align: left;
+    width: 980px;
+    margin: 0 auto;
+}
+
+#footer-inside div {
+    display: inline-block;
 }
 
 #footer-logo {
-    height: 50px;
+    height: 42px;
     width: 100px;
+    padding: 9px 0;
+}
+
+#footer-contacts {
+    font-family: "Cyntho Light", sans-serif;
+    font-size: 0.8em;
+    height: 46px;
+    position: relative;
+    transform: translateY(-40%);
 }
