--- a/site/css/Menu.css
+++ b/site/css/Menu.css
@@ -4,9 +4,13 @@
 */
 
 /* Header */
-#logo-block {
+#menu-block {
     text-align: center;
-    width: 280px;
+}
+
+#logo-block {
+    margin: 0 auto;
+    width: 240px;
 }
 
 #menu-bar-outside {
@@ -27,8 +31,8 @@
 }
 
 #menu-bar-links {
-    padding-bottom: 6px;
-    padding-top: 6px;
+    padding-bottom: 7px;
+    padding-top: 7px;
 }
 
 .menu-links-item {
@@ -38,9 +42,9 @@
 #menu-bar-links a {
     color: black;
     font-family: "Cyntho Bold", sans-serif;
-    font-size: 1.2em;
+    font-size: 1.1em;
     text-transform: uppercase;
-    padding: 6px 0;
+    padding: 7px 0;
     text-decoration: none;
 }
 
@@ -50,13 +54,13 @@
 
 #menu-bar-tools {
     float: right;
+    margin-top: 1px;
+    padding: 6px 0;
 }
 
 #menu-bar-search {
     height: 20px;
     width: 20px;
-    padding-top: 6px;
-    padding-bottom: 6px;
     padding-left: 8px;
     padding-right: 8px;
 }
@@ -64,8 +68,6 @@
 #menu-bar-currency {
     height: 20px;
     width: 20px;
-    padding-top: 6px;
-    padding-bottom: 6px;
     padding-left: 8px;
     padding-right: 8px;
 }
@@ -73,7 +75,5 @@
 #menu-bar-bag {
     height: 20px;
     width: 20px;
-    padding-top: 6px;
-    padding-bottom: 6px;
     padding-left: 8px;
 }
