--- a/site/css/MillShop.css
+++ b/site/css/MillShop.css
@@ -28,8 +28,8 @@ button {
     display: flex;
     overflow: hidden;
 
-    margin: 10px;
-    padding: 5px 5px;
+    margin: 10px 0;
+    padding: 5px 0;
 
     cursor: pointer;
     user-select: none;
