--- a/site/css/Footer.css
+++ b/site/css/Footer.css
@@ -8,7 +8,9 @@
 
 /* Footer */
 #footer-block {
-    position: absolute;
+    position: relative;
+    margin-top: -92px;
+    top: 100%;
     right: 0;
     bottom: 0;
     left: 0;
