--- a/site/css/MillShop.css
+++ b/site/css/MillShop.css
@@ -34,6 +34,16 @@ body > #wrapping-block {
     margin: 0 auto;
 }
 
+#error-title{
+    font-size: 130px;
+    margin-top: 30px;
+
+}
+#error-text{
+    font-size: 60px;
+    margin-bottom: 30px;
+}
+
 /* Buttons */
 button {
     width: 90px;
