--- a/site/css/MillShop.css
+++ b/site/css/MillShop.css
@@ -29,18 +29,28 @@ body > #wrapping-block {
     position: relative;
     height: 100%;
     padding-bottom: 100px;
-    width: 980px;
+    max-width: 1000px;
+    width: 100vw;
     text-align: left;
     margin: 0 auto;
 }
 
-#error-title{
+.margin-wrapper {
+    max-width: 960px;
+    width: 100vw;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.error-title {
     font-size: 130px;
     margin-top: 30px;
-
 }
-#error-text{
-    font-size: 60px;
+
+.error-text {
+    font-family: "Cyntho Bold", sans-serif;
+    text-transform: uppercase;
+    font-size: 50px;
     margin-bottom: 30px;
 }
 
