--- a/site/css/Footer.css
+++ b/site/css/Footer.css
@@ -40,17 +40,10 @@
 #footer-contacts {
     font-family: "Cyntho Light", sans-serif;
     font-size: 0.8em;
-    height: 46px;
-    position: relative;
-    transform: translateY(-40%);
+    padding-bottom: 10px;
 }
 
-#feedback
+#footer-feedback
 {
-    text-align: center;
-    padding-left: 30%;
     font-size: 1em;
-    height: 46px;
-    position: relative;
-    transform: translateY(-40%);
 }
