--- a/site/css/Menu.css
+++ b/site/css/Menu.css
@@ -32,6 +32,7 @@
 
 #menu-bar-inside div {
     display: inline-block;
+    vertical-align: middle;
 }
 
 #menu-bar-links {
@@ -58,32 +59,43 @@
 
 #menu-bar-tools {
     float: right;
-    margin-top: 1px;
-    padding: 6px 0 5px 0;
 }
 
 #menu-bar-search {
     height: 20px;
+    padding: 6px 0 5px 0;
 }
 
 #menu-bar-currency {
     height: 20px;
     width: 20px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 0 8px;
+    margin-top: 5px;
+    background: url("../resources/images/currency.svg") center center no-repeat;
+    background-size: 20px;
 }
 
 #menu-bar-bag {
-    height: 20px;
-    width: 20px;
-    padding-left: 8px;
+    height: 23px;
+    width: 23px;
+    margin: 4px 0 0 8px;
+    background: url("../resources/images/bag.svg") center center no-repeat;
+    background-size: 23px 23px;
+}
+
+#menu-bag-items-count {
+    color: white;
+    font-family: "Cyntho Bold", sans-serif;
+    font-size: 1em;
+    margin: 2px 0 0 6px;
+    text-align: center;
 }
 
 /* Search */
 
 .search-form {
     position: absolute;
-    margin-top: -8px;
+    margin-top: -6px;
 }
 
 .search-textbox {
@@ -101,7 +113,7 @@
     top: 0;
     right: 0;
     z-index: 3;
-    transition: width 0.7s cubic-bezier(0.000, 0.795, 0.000, 1.000), background 0.7s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+    transition: width 0.7s cubic-bezier(0.000, 0.795, 0.000, 1.000), background 0.7s cubic-bezier(0.000, 0.795, 0.000, 1.000), z-index 0.7s cubic-bezier(0.000, 0.000, 0.000, 1.000);
     cursor: pointer;
 }
 
