--- a/site/css/MillShop.css
+++ b/site/css/MillShop.css
@@ -61,7 +61,7 @@ body > #wrapping-block {
     display: flex;
     overflow: hidden;
 
-    margin: 10px 0;
+    margin: 10px 0px;
     padding: 5px 0;
 
     cursor: pointer;
