--- a/site/css/Menu.css
+++ b/site/css/Menu.css
@@ -76,11 +76,11 @@
 }
 
 #menu-bar-user {
-    height: 20px;
+    height: 24px;
     width: 20px;
     padding: 0 8px;
     margin-top: 5px;
-    background: url("../resources/images/currency.svg") center center no-repeat;
+    background: url("../resources/images/user.svg") center center no-repeat;
     background-size: 20px;
 }
 
@@ -93,10 +93,11 @@
 }
 
 #menu-bag-items-count {
+    width: 20px;
     color: white;
     font-family: "Cyntho Bold", sans-serif;
     font-size: 1em;
-    margin: 2px 0 0 6px;
+    margin: 3px 0 0 2px;
     text-align: center;
 }
 
