Optimization and adding copyright header into files

--- a/site/css/Feedback.css
+++ b/site/css/Feedback.css
@@ -1,3 +1,8 @@
+/*
+    MILL SHOP COMPANY, 2016
+    CREATED BY NIKITA GRECHUKHIN, NIKOLAY KOMAROV AND VAGIK SIMONYAN
+*/
+
 /* === Remove input autofocus webkit === */
 *:focus {outline: none;}
 
