--- a/site/css/Login.css
+++ b/site/css/Login.css
@@ -1,3 +1,9 @@
+/*
+    MILL SHOP COMPANY, 2016
+    CREATED BY NIKITA GRECHUKHIN, NIKOLAY KOMAROV AND VAGIK SIMONYAN
+*/
+@import "MillShop.css";
+
 #login
 {
     background-color: #fff;
