--- a/site/css/MillShop.css
+++ b/site/css/MillShop.css
@@ -163,6 +163,7 @@ body > #wrapping-block {
     padding-right: 10px;
 }
 
+/* Items */
 .results-of-query > div {
     display: inline-block;
 }
@@ -172,3 +173,71 @@ body > #wrapping-block {
     width: 225px;
 }
 
+/* Criteria */
+#criteria > div {
+    display: inline-block;
+}
+
+#criteria-color-form, #criteria-size-form {
+    margin-right: 20px;
+}
+
+#criterion-sizes, #criterion-colors {
+    padding-top: 10px;
+    height: 80px;
+    width: 120px;
+    overflow-y: scroll !important;
+    overflow-x: hidden !important;
+    display: block;
+}
+
+/* Checkboxes */
+.simple-checkbox-wrapper {
+    margin-bottom: -18px;
+}
+
+.simple-checkbox {
+    float: left;
+    vertical-align: middle;
+    width: 13px;
+    height: 13px;
+}
+
+.simple-checkbox + label {
+    cursor: pointer;
+}
+
+.simple-checkbox:not(checked) {
+    margin: 0;
+    opacity: 0;
+    position: absolute;
+}
+
+.simple-checkbox:not(checked) + label {
+    position: relative;
+    padding-left: 23px;
+    font-family: "Cyntho Light", sans-serif;
+    font-size: 0.9em;
+}
+
+.simple-checkbox:not(checked) + label:after,
+.simple-checkbox:not(checked) + label:before,
+.simple-checkbox:checked + label:after,
+.simple-checkbox:checked + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 13px;
+    height: 13px;
+}
+
+.simple-checkbox:not(checked) + label:after,
+.simple-checkbox:not(checked) + label:before {
+    background-color: white;
+    border: solid 1px #0c202b;
+}
+
+.simple-checkbox:checked + label:after,
+.simple-checkbox:checked + label:before {
+    background-color: #0c202b;
+}
