Styling criteria form

--- a/site/css/elements/criteria.css
+++ b/site/css/elements/criteria.css
@@ -8,15 +8,31 @@
     display: inline-block;
 }
 
-#criteria-color-form, #criteria-size-form {
+.criterion-header {
+    margin-top: 4px;
+    margin-bottom: 10px;
+}
+
+.criteria-form {
     margin-right: 20px;
 }
 
-#criterion-sizes, #criterion-colors {
-    padding-top: 10px;
+.criterion {
     height: 80px;
-    width: 120px;
+    width: 180px;
     overflow-y: scroll !important;
     overflow-x: hidden !important;
     display: block;
+}
+
+.criterion::-webkit-scrollbar {
+    width: 10px;
+}
+
+.criterion::-webkit-scrollbar-track {
+    background-color: #e7e7e7;
+}
+
+.criterion::-webkit-scrollbar-thumb {
+    background-color: #9b9b9b;
 }
