--- a/site/css/MillShop.css
+++ b/site/css/MillShop.css
@@ -14,6 +14,7 @@
 @import "elements/simple-checkbox.css";
 @import "elements/simple-textbox-select.css";
 @import "elements/item-presenter.css";
+@import "elements/simple-spinner.css";
 
 /* Body */
 body {
