--- a/site/css/Footer.css
+++ b/site/css/Footer.css
@@ -42,6 +42,8 @@
 #footer-contacts {
     font-family: "Cyntho Light", sans-serif;
     font-size: 0.8em;
+    width: 100%;
+    text-align: center;
 }
 
 #footer-feedback {
