--- a/site/css/Feedback.css
+++ b/site/css/Feedback.css
@@ -3,123 +3,100 @@
     CREATED BY NIKITA GRECHUKHIN, NIKOLAY KOMAROV AND VAGIK SIMONYAN
 */
 
-/* === Remove input autofocus webkit === */
-*:focus {outline: none;}
-
-/* === Шрифты для формы и общая ширина === */
-.contact_form h2, .contact_form label {
-    font-family:"Cyntho Medium", sans-serif;
+.page-title-wrapper {
+    margin-top: 15px;
 }
-.form_hint, .required_notification {
+
+#contact-form-wrapper > div {
+    display: inline-block;
+    vertical-align: text-top;
+}
+
+.contact-form {
+    width: 390px;
+    margin-top: 16px;
+}
+
+.form-hint, .required-notification {
     font-size: 11px;
 }
 
-.contact_form {
-    width:700px;
+.contact-form-textbox {
+    padding: 8px;
+    width: 300px;
 }
 
-/* === Ширина формы === */
-.contact_form p {
-    width:650px;
-
-    padding:0px;
+.contact-form-textarea {
+    resize: vertical;
 }
 
-/* === Размер и расположение блоков === */
-.contact_form label {
-    width:150px;
-    margin-top: 3px;
-    display:inline-block;
-    float:left;
-    padding:3px;
-}
-
-.contact_form textarea {padding:8px; width:300px;}
-.contact_form button {margin-left:156px;}
-
-
-
-/* === HTML5  === */
-.contact_form input:required, .contact_form textarea:required {
+/* HTML5 */
+.contact-form input:required,
+.contact-form textarea:required {
     background: #fff no-repeat 98% center;
 }
-.contact_form input:required:valid, .contact_form textarea:required:valid {
+.contact-form input:required:valid,
+.contact-form textarea:required:valid {
     background: #fff no-repeat 98% center;
 
 }
-.contact_form input:focus:invalid, .contact_form textarea:focus:invalid {
+.contact-form input:focus:invalid,
+.contact-form textarea:focus:invalid {
     background: #fff no-repeat 98% center;
 
 }
 
-/* === Стили подсказок === */
-.form_hint {
+/* Hints */
+.form-hint {
     background: #d45252;
     border-radius: 3px 3px 3px 3px;
     color: white;
-    margin-left:8px;
+    margin-top: 14px;
     padding: 1px 6px;
-    z-index: 999; /* подсказки поверх всех элементов */
-    position: absolute; /* правильное отображение, если подсказка в 2 строки */
+    z-index: 999;
+    position: absolute;
     display: none;
 }
-.form_hint::before {
+
+.form-hint::before {
     content: "\25C0";
-    color:#d45252;
+    color: #d45252;
     position: absolute;
-    top:1px;
-    left:-6px;
+    top: 1px;
+    left: -6px;
 }
-.contact_form input:focus + .form_hint {display: inline;}
-.contact_form input:required:valid + .form_hint {background: #ec141a;}
-.contact_form input:required:valid + .form_hint::before {color:#ec141a;}
 
-/* === Оформление кнопки === */
-button.submit {
-    background-color: #ec141a;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#ec141a), to(#c6000f));
-    background-image: -webkit-linear-gradient(top, #ec141a, #c6000f);
-    background-image: -moz-linear-gradient(top, #ec141a, #c6000f);
-    background-image: -ms-linear-gradient(top, #ec141a, #c6000f);
-    background-image: -o-linear-gradient(top, #ec141a, #c6000f);
-    background-image: linear-gradient(top, #ec141a, #c6000f);
-
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-
-    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
-
-    -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
-    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
-
-    border-width: 1px;
-    border-style: solid;
-    border-color: #ec141a #ec141a #ec141a #ec141a;
-
-    float: left;
-    height: 28px;
-    padding: 0;
-    width: 90px;
-    cursor: pointer;
-    font: 13px "Cyntho Bold", sans-serif;
-    color: white;
+.contact-form input:focus + .form-hint {
+    display: inline;
 }
-button.submit:hover {
-    background-color: #ff3635;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#ff3635), to(#ef0010));
-    background-image: -webkit-linear-gradient(top, #ff3635, #ef0010);
-    background-image: -moz-linear-gradient(top, #ff3635, #ef0010);
-    background-image: -ms-linear-gradient(top, #ff3635, #ef0010);
-    background-image: -o-linear-gradient(top, #ff3635, #ef0010);
-    background-image: linear-gradient(top, #ff3635, #ef0010);
+
+.contact-form input:required:valid + .form-hint {
+    background: #ec141a;
 }
-button.submit:active {
-    outline: none;
 
-    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
-    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
+.contact-form input:required:valid + .form-hint::before {
+    color: #ec141a;
+}
 
+.contact-form-button {
+    width: 160px;
+}
+
+#contact-us-banner {
+    height: 453px;
+    width: 318px;
+    margin-left: 87px;
+    margin-bottom: 40px;
+    margin-top: 10px;
+}
+
+#contact-us-banner img {
+    width: 315px;
+}
+
+#contact-us-banner-text {
+    text-align: center;
+    margin-top: 11px;
+    font-family: "Cyntho Light", sans-serif;
+    font-size: 1.3em;
 }
