--- a/site/css/Login.css
+++ b/site/css/Login.css
@@ -4,8 +4,7 @@
 */
 @import "MillShop.css";
 
-#login
-{
+#login {
     background-color: #fff;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
     background-image: -webkit-linear-gradient(top, #fff, #eee);
@@ -47,8 +46,7 @@
             0 7px 0 rgba(0, 0, 0, .2);
 }
 
-#login:before
-{
+#login:before {
     content: '';
     position: absolute;
     z-index: -1;
@@ -64,8 +62,7 @@
 
 /*--------------------*/
 
-h1
-{
+h1 {
     text-shadow: 0 1px 0 rgba(255, 255, 255, .7), 0px 2px 0 rgba(0, 0, 0, .5);
     text-transform: uppercase;
     text-align: center;
@@ -76,12 +73,7 @@ h1
     position: relative;
 }
 
-
-
-/*--------------------*/
-
-fieldset
-{
+fieldset {
     border: 0;
     padding: 0;
     margin: 0;
@@ -89,8 +81,7 @@ fieldset
 
 /*--------------------*/
 
-#inputs input
-{
+#inputs input {
     background: #f1f1f1  no-repeat;
     padding: 10px 10px 10px 20px;
     margin: 0 120px 5px 0;
@@ -106,8 +97,7 @@ fieldset
 }
 
 
-#inputs-right input
-{
+#inputs-right input {
     background: #f1f1f1  no-repeat;
     padding: 10px 10px 10px 20px;
     margin: 0 0px 5px 366px;
@@ -121,8 +111,7 @@ fieldset
     box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
 }
 
-#inputs-right2 input
-{
+#inputs-right2 input {
     background: #f1f1f1 url(http://www.red-team-design.com/wp-content/uploads/2011/09/login-sprite.png) no-repeat;
     padding: 10px 10px 10px 20px;
     margin: 0 0px 5px 456px;
@@ -136,19 +125,16 @@ fieldset
     box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
 }
 
-#username
-{
+#username {
     background-position: 5px -2px !important;
 }
 
-#password
-{
+#password {
     background-position: 5px -52px !important;
 }
 
 
-#inputs input:focus
-{
+#inputs input:focus {
     background-color: #fff;
     border-color: #e8c291;
     outline: none;
@@ -158,80 +144,9 @@ fieldset
 }
 
 /*--------------------*/
-#actions
-{
+#actions {
     margin: 25px 0 0 0;
 }
-
-#submit
-{
-    background-color: #ec141a;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#ec141a), to(#c6000f));
-    background-image: -webkit-linear-gradient(top, #ec141a, #c6000f);
-    background-image: -moz-linear-gradient(top, #ec141a, #c6000f);
-    background-image: -ms-linear-gradient(top, #ec141a, #c6000f);
-    background-image: -o-linear-gradient(top, #ec141a, #c6000f);
-    background-image: linear-gradient(top, #ec141a, #c6000f);
-
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-
-    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
-
-    -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
-    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
-
-    border-width: 1px;
-    border-style: solid;
-    border-color: #ec141a #ec141a #ec141a #ec141a;
-
-    float: left;
-    height: 28px;
-    padding: 0;
-    width: 90px;
-    cursor: pointer;
-    font: 13px "Cyntho Bold", sans-serif;
-    color: white;
-}
-
-#submit:hover,#submit:focus
-{
-    background-color: #ff3635;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#ff3635), to(#ef0010));
-    background-image: -webkit-linear-gradient(top, #ff3635, #ef0010);
-    background-image: -moz-linear-gradient(top, #ff3635, #ef0010);
-    background-image: -ms-linear-gradient(top, #ff3635, #ef0010);
-    background-image: -o-linear-gradient(top, #ff3635, #ef0010);
-    background-image: linear-gradient(top, #ff3635, #ef0010);
-}
-
-#submit:active
-{
-    outline: none;
-
-    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
-    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
-}
-
-#submit::-moz-focus-inner
-{
-    border: none;
-}
-
-#actions a
-{
-    color: #3151A2;
-    float: right;
-    line-height: 35px;
-    margin-left: 10px;
-}
-
-/*--------------------*/
-
-
 
 #log-block div {
     width: 450px;
@@ -239,4 +154,14 @@ fieldset
     font-size: 10px;
     display: inline-table;
     font-family: "Cyntho Bold", sans-serif;
+}
+
+.login-button {
+    width: 100px;
+    margin-top: 15px;
+}
+
+.register-button {
+    width: 140px;
+    margin-top: 15px;
 }
