--- a/site/css/Menu.css
+++ b/site/css/Menu.css
@@ -75,16 +75,6 @@
     background-size: 20px;
 }
 
-#menu-bar-user {
-    height: 24px;
-    width: 20px;
-    padding: 0 8px;
-    margin-top: 5px;
-    background: url("../resources/images/user.svg") center center no-repeat;
-    background-size: 20px;
-}
-
-
 #menu-bar-bag {
     height: 23px;
     width: 23px;
@@ -174,4 +164,22 @@
 
 .search-button:hover {
     opacity: 0.5;
+}
+
+.menu-bar-user-in {
+    height: 24px;
+    width: 20px;
+    padding: 0 8px;
+    margin-top: 5px;
+    background: url("../resources/images/user.svg") center center no-repeat;
+    background-size: 20px;
+}
+
+.menu-bar-user-out {
+    height: 24px;
+    width: 20px;
+    padding: 0 8px;
+    margin-top: 5px;
+    background: url("../resources/images/bag.svg") center center no-repeat;
+    background-size: 20px;
 }
