--- a/site/css/elements/simple-button.css
+++ b/site/css/elements/simple-button.css
@@ -49,3 +49,49 @@
     outline: 0;
 }
 
+
+
+.simple-button-dis {
+    width: 90px;
+    height: 36px;
+    display: flex;
+    overflow: hidden;
+
+    margin: 10px 0px;
+    padding: 5px 0;
+
+    cursor: pointer;
+    user-select: none;
+    transition: all 160ms ease-in-out;
+    text-align: center;
+    white-space: nowrap;
+    text-decoration: none !important;
+
+    color: white;
+    background: #949494;
+
+    border: 0 none;
+
+    font-family: "Cyntho Bold", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.3;
+
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 160px;
+}
+
+.simple-button-dis:hover {
+    transition: all 160ms ease;
+    background-color: #949494;
+}
+
+.simple-button-dis:active {
+    transition: all 160ms ease;
+    background-color: #949494;
+}
+
+.simple-button-dis:focus {
+    outline: 0;
+}
