--- a/site/css/Login.css
+++ b/site/css/Login.css
@@ -66,7 +66,7 @@
 }
 
 .inputs {
-    margin-top: 20px;
+    margin-top: 14px;
 }
 
 .inputs input {
@@ -110,4 +110,8 @@
     display: inline-block;
     width: 400px;
     vertical-align: top;
+}
+
+#log-block {
+    margin-bottom: 74px;
 }
