--- a/site/css/MillShop.css
+++ b/site/css/MillShop.css
@@ -112,3 +112,8 @@ body > #wrapping-block {
     height: 1px;
     background-color: #d2d2d2;
 }
+
+.no-dec-link {
+    text-decoration: none;
+    color: black;
+}
